--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <title>MapleCalc</title>
   <base href="/">
